<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/dialog_background">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inactivate_user_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Description -->
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inactivate_user_message"
        android:textSize="14sp"
        android:textColor="#555555"
        android:paddingTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- New Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetIdLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="User id"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/useridError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/resetIdLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Confirm Password -->

    <!-- Buttons Row -->
    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/useridError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inactivate_cancel"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inactivate_confirm"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
